--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p class="block-paragraph">More about me: I also do a lot of <strong>painting</strong>, <strong>textile art</strong>, and I've done a little bit of <a href="https://reversibleadiabaticpress.com"><strong>illustration and book cover design</strong></a> as well. More to come on this site re: all of my other artistic pursits, past and present!</p>
     <p class="block-paragraph">I do also have a <strong>day job in tech</strong>, where I am currently a software product manager. (I have been a software engineer, customer support person, and "general do-everything-project-management-person" in the past.) I do have a <a href="https://www.linkedin.com/in/ejuliencoyne/">LinkedIn</a> with more details about this, which you can look at if you feel you must.</p>
     <p class="block-paragraph">Further in the past, I also <strong>went to school</strong>. I did undergraduate study and got a masters' degree in physics and philosophy from the University of Oxford (2011-2015). Before that I went to high school at the Maine School of Science and Mathematics (2008-2011).</p>
-    <p class="block-paragraph">I do also have an <strong>instagram</strong>: <a href="https://www.instagram.com/ejuliencoyne/">@ejuliencoyne</a></p>
+    <p class="block-paragraph"><strong>Instagram</strong>: <a href="https://www.instagram.com/ejuliencoyne/">@ejuliencoyne</a></p>
     <br>
     <br>
     <br>
