--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     <p class="block-paragraph">Further in the past, I also <strong>went to school</strong>. I did undergraduate study and got a masters' degree in physics and philosophy from the University of Oxford (2011-2015). Before that I went to high school at the Maine School of Science and Mathematics (2008-2011).</p>
     <p class="block-paragraph"><strong>Instagram</strong>: <a href="https://www.instagram.com/ejuliencoyne/">@ejuliencoyne</a></p>
     <br>
+    <hr>
+    <br>
+    <p class="block-paragraph"><strong>Q</strong>: Why do you call yourself a dilletante?</p>
+    <p class="block-paragraph"><strong>A</strong>: A dilletante is <em>a person who cultivates an area of interest, such as the arts, without real commitment or knowledge</em>, aka a dabbler (derogatory). I think of myself this way because I do all these different things but am not as serious about any of them as I wish I were. I am making fun of this by calling myself a dilletante.</p>
+    <br>
     <br>
     <br>
     <br>
